--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -222,21 +222,21 @@ Vous devez fournir au composant des indications sur les largeurs d'image et les 
 
 Bien que [`formats`](/fr/guides/integrations-guide/image/#formats) ne soit pas requis, le format d'image d'origine des images distantes est inconnu et ne sera pas inclus par défaut. S'il n'est pas fourni, seuls `webp` et `avif` seront inclus.
 
-#### Local Images in `public/`
+#### Images locales dans `public/`
 
-(required attributes: [`src`](/en/guides/integrations-guide/image/#src-1), [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1), and [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio-1))
+(attributs requis: [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1), et [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio-1))
 
-Pass the component's `src` attribute a path relative to the public folder and include a value for `alt`. 
+Passez à l'attribut `src` du composant un chemin relatif au dossier public et incluez une valeur pour `alt`.
 
-The image will be treated as a remote image, so a value for `aspectRatio` is also required to ensure the correct height can be calculated at build time.
+L'image sera traitée comme une image distante, donc une valeur pour `aspectRatio` est également requise pour s'assurer que la hauteur correcte puisse être calculée au moment du Build.
 
-You must provide the component with guidance for image widths and screen sizes, but [all other properties](/en/guides/integrations-guide/image/#picture-) are optional.
+Vous devez fournir au composant des indications sur les largeurs d'image et les tailles d'écran, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#picture-) sont facultatives.
 
-Although [`formats`](/en/guides/integrations-guide/image/#formats) is not required, the original image format of images in the `public/` folder is unknown and will not be included by default. If not provided, only `webp` and `avif` will be included.
+Bien que [`formats`](/fr/guides/integrations-guide/image/#formats) ne soit pas requis, le format d'origine des images dans le dossier `public/` est inconnu et ne sera pas inclus par défaut. S'il n'est pas fourni, seuls "webp" et "avif" seront inclus.
 
-Your original image will be copied unprocessed to the build folder, like all files located in `public/`, and Astro's image integration will also return optimized versions of the image.
+Votre image d'origine sera copiée sans traitement dans le dossier de Build, comme tous les fichiers situés dans `public/`, et l'intégration d'image d'Astro renverra également des versions optimisées de l'image.
 
-#### Examples
+#### Exemples
 
 ```astro
 ---
@@ -245,25 +245,24 @@ import localImage from '../assets/logo.png';
 const remoteImage = 'https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png';
 ---
 
-<!--Local image with multiple sizes and formats-->
+<!-- Image locale avec plusieurs tailles et formats -->
 <Picture src={localImage} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" formats={['avif', 'jpeg', 'png', 'webp']} alt="The Astro logo" />
 
-<!--Remote image (aspect ratio is required)-->
-<Picture src={remoteImage} widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="The Google logo" />
+<!-- Image distante (le ration d'aspect est requis) -->
+<Picture src={remoteImage} widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="Le logo Google" />
 
-<!--Images in /public work like remote images-->
-<Picture src="/logo.png" widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="The Google logo" />
+<!-- Les images dans /public fonctionnent comme les images distantes -->
+<Picture src="/logo.png" widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="Le logo Google" />
 
-<!--Inlined imports are supported-->
-<Picture src={import("../assets/logo.png")} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" alt="The Astro logo" />
+<!-- Les imports directs sont supportés -->
+<Picture src={import("../assets/logo.png")} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" alt="Le logo Google" />
 
 ```
 
 
 ### Using in MDX
 
-In `.mdx` files, `<Image />` and `<Picture />` can receive your image `src` through imports and exports.
-
+Dans les fichiers `.mdx`, `<Image />` et `<Picture />` peuvent recevoir votre `src` de l'image via des imports et exports.
 ```mdx
 // src/pages/index.mdx
 
@@ -272,16 +271,16 @@ import rocket from '../assets/rocket.png';
 export const galaxy = 'https://astro.build/assets/galaxy.jpg';
 
 <Image src={import('../assets/logo.png')} alt="Astro"/>
-<Image src={rocket} width={300} alt="Spaceship approaching the moon."/>
-<Picture src={rocket} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" alt="A rocket blasting off." />
-<Picture src={galaxy} widths={[200, 400, 800]} aspectRatio={16/9} sizes="(max-width: 800px) 100vw, 800px" alt="Outer space." />
+<Image src={rocket} width={300} alt="Fusée approchant la lune."/>
+<Picture src={rocket} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" alt="Une fusée qui décolle." />
+<Picture src={galaxy} widths={[200, 400, 800]} aspectRatio={16/9} sizes="(max-width: 800px) 100vw, 800px" alt="Le cosmos." />
 ```
 
-### Setting Default Values
+### Définitions des valeurs par défaut
 
-Currently, there is no way to specify default values for all `<Image />` and `<Picture />` components. Required attributes should be set on each individual component.
+Actuellement, il n'existe aucun moyen de spécifier des valeurs par défaut pour tous les composants `<Image />` et `<Picture />`. Les attributs requis doivent être définis sur chaque composant.
 
-As an alternative, you can wrap these components in another Astro component for reuse. For example, you could create a component for your blog post images:
+Comme alternative, vous pouvez encapsuler ces composants dans un autre composant Astro pour les réutiliser. Par exemple, vous pouvez créer un composant pour les images de votre article de blog :
 
 ```astro title="src/components/BlogPostImage.astro"
 ---
@@ -299,10 +298,10 @@ const {src, ...attrs} = Astro.props;
 </style>
 ```
 
-### Using `<img>` with the Image Integration
+### Utilisation de `<img>` avec l'intégration d'image
 
-The official image integration will change image imports to return an object rather than a source string.
-The object has the following properties, derived from the imported file:
+L'intégration d'image officielle modifiera les importations d'images pour renvoyer un objet plutôt qu'une chaîne source.
+L'objet possède les propriétés suivantes, dérivées du fichier importé :
 ```ts
 {
   src: string;
@@ -312,42 +311,41 @@ The object has the following properties, derived from the imported file:
 }
 ```
 
-If you have the image integration installed, refer to the `src` property of the object when using `<img>`. 
+Si l'intégration d'image est installée, reportez-vous à la propriété `src` de l'objet lors de l'utilisation de `<img>`.
 
 ```astro ".src"
 ---
 import rocket from '../images/rocket.svg';
 ---
-<img src={rocket.src} alt="A rocketship in space."/>
+<img src={rocket.src} alt="Une fusée dans l'espace."/>
 ```
 
-Alternatively, add `?url` to your imports to tell them to return a source string.
+Une alternative consiste à ajouter `?url` à vos imports pour leur dire de renvoyer une chaîne source.
 
 ```astro "?url"
 ---
 import rocket from '../images/rocket.svg?url';
 ---
-<img src={rocket} alt="A rocketship in space."/>
+<img src={rocket} alt="Une fusée dans l'espace."/>
 ```
 
-## Using Images from a CMS or CDN
+## Utilisation des Images depuis un CMS ou un CDN
 
-Image CDNs work with Astro. Use an image's full URL as the `src` attribute in an `<img>` tag or Markdown notation. 
+Les CDN d'images fonctionnent avec Astro. Utilisez l'URL complète d'une image comme attribut `src` dans une balise `<img>` ou une notation Markdown.
 
-Alternatively, if the CDN provides a Node.js SDK, you can use that in your project. For example, [Cloudinary’s SDK](https://cloudinary.com/documentation/node_integration) can generate the `<img>` tag with the appropriate `src` for you.
+Alternativement, si le CDN fournit un SDK Node.js, vous pouvez l'utiliser dans votre projet. Par exemple, [le SDK de Cloudinary](https://cloudinary.com/documentation/node_integration) peut générer la balise `<img>` avec le `src` approprié pour vous.
 
-To use [external images with the `<Image />`](#remote-images) and [`<Picture />`](#remote-images-1) components from Astro's image integration, you must specify the appropriate dimension and format values for working with remote images.
+Pour utiliser des [images externes avec les composants `<Image />`](#remote-images) et [`<Picture />`](#remote-images-1) de l'intégration d'image d'Astro, vous devez spécifier les valeurs de dimension et de format pour travailler avec des images distantes.
 
-## Alt Text
+## Texte Alternatif
 
-Not all users can see images in the same way, so accessibility is an especially important concern when using images. Use the `alt` attribute to provide [descriptive alt text](https://www.w3.org/WAI/tutorials/images/) for images. 
+Tous les utilisateurs ne peuvent pas voir les images de la même manière, l'accessibilité est donc une préoccupation particulièrement importante lors de l'utilisation d'images. Utilisez l'attribut `alt` pour fournir un [texte alternatif descriptif](https://www.w3.org/WAI/tutorials/images/) pour les images.
 
-This attribute is required for the image integration's `<Image />` and `<Picture />` components. These components will throw an error if no alt text is provided. 
+Cet attribut est requis pour les composants `<Image />` et `<Picture />` de l'intégration d'image. Ces composants génèrent une erreur si aucun texte alternatif n'est fourni.
 
-If the image is merely decorative (i.e. doesn’t contribute to the understanding of the page), set `alt=""` so that screen readers know to ignore the image.
+Si l'image est simplement décorative (i.e. qu'elle ne contribue pas à la compréhension de la page), définissez `alt=""` pour que les lecteurs d'écran sachent ignorer l'image.
 
 
+## Intégrations Communautaires
 
-## Community Integrations
-
-In addition to the official [`@astrojs/image`](/en/guides/integrations-guide/image/) integration, there are several third-party [community image integrations](https://astro.build/integrations/css+ui/?q=image) for optimizing and working with images in your Astro project.
+En plus de l'intégration [`@astrojs/image`](/fr/guides/integrations-guide/image/) officielle, il existe plusieurs [intégrations d'images communautaires](https://astro.build/integrations/css+ui/?q=image) pour optimiser et travailler avec des images dans votre projet Astro.
