--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -2,6 +2,7 @@
 layout: ~/layouts/MainLayout.astro
 title: Images
 description: Apprendre à utiliser les images dans Astro.
+i18nReady: true
 ---
 import Since from '../../../components/Since.astro';
 
@@ -9,9 +10,9 @@ import Since from '../../../components/Since.astro';
 Astro fournit plusieurs façons d'utiliser les images sur votre site, qu'elles soient stockées localement dans votre projet, liées à distance ou stockées dans un CMS ou un CDN !
 ### Dans les fichiers `.astro`
 
-Astro utilise les balises `<img>` pour afficher les images, et tous les attributs HTML des images sont supportées.
+Astro utilise les éléments HTML `<img>` pour afficher les images, et tous les attributs HTML des images sont supportés.
 
-L'attribut `src` est requis, et son format va dépendre d'où les images sont stockées :
+L'attribut `src` est requis, et son format va dépendre de l'endroit où les images sont situées :
 
 ```astro title="src/pages/index.astro"
 ---
@@ -19,24 +20,24 @@ import rocket from '../images/rocket.svg';
 ---
 <!-- Image distante sur un autre serveur -->
 <img src="https://astro.build/assets/logo.png" width="25" alt="Astro">
-<!-- Image locale stockée à public/assets/stars.png -->
-<img src="/assets/stars.png" alt="A starry night sky.">
-<!-- Image locale stockée à src/images/rocket.svg -->
-<img src={rocket} alt="A rocketship in space."/>
+<!-- Image locale située à public/assets/stars.png -->
+<img src="/assets/stars.png" alt="Un ciel nocturne étoilé.">
+<!-- Image locale située à src/images/rocket.svg -->
+<img src={rocket} alt="Une fusée dans l'espace."/>
 ```
 
 ### Dans les fichiers Markdown
 
-Vou pouvez utiliser la syntaxe Markdown standard  `![]()` ou les balises HTML standards `<img>` dans vos fichiers `.md` pour les images situées dans votre dossier `public/`, ou pour les images distantes sur un autre serveur.
+Vou pouvez utiliser la syntaxe Markdown standard  `![]()` ou les balises HTML standard `<img>` dans vos fichiers `.md` pour les images situées dans votre dossier `public/`, ou pour les images distantes sur un autre serveur.
 
-If vous ne pouvez pas garder vos images dans `public/`, nous vous recommendons d'utiliser le format de fichier `.mdx`, qui vous permet de combiner des composants importés avec une syntaxe semblable à celle de Markdown. Utilisez l' [intégration MDX](/fr/guides/integrations-guide/mdx/) pour ajouter le support de MDX à Astro.
+Si vous ne pouvez pas garder vos images dans `public/`, nous vous recommendons d'utiliser le format de fichier `.mdx`, qui vous permet de combiner des composants importés avec une syntaxe semblable à celle de Markdown. Utilisez [l'intégration MDX](/fr/guides/integrations-guide/mdx/) pour ajouter le support de MDX à Astro.
 
 ```md
 // src/pages/post-1.md
 
 # Ma Page Markdown
 
-<!-- Image locale stockée à public/assets/stars.png -->
+<!-- Image locale située à public/assets/stars.png -->
 ![Un ciel nocturne étoilé.](/assets/stars.png)
 <img src="/assets/stars.png" alt="Un ciel nocturne étoilé.">
 
@@ -47,40 +48,44 @@ If vous ne pouvez pas garder vos images dans `public/`, nous vous recommendons d
 
 ### Dans les fichiers MDX
 
-Vou pouvez utiliser la syntaxe Markdown standard  `![]()` ou les balises JSX `<img>` dans vos fichiers `.mdx` pour les images depuis votre dossier `public/` ou un serveur distant.
+Vou pouvez utiliser la syntaxe Markdown standard `![]()` ou les balises JSX `<img />` dans vos fichiers `.mdx` pour afficher des images depuis votre dossier `public/` ou depuis un serveur distant.
 
-De plus, vous pouvez importer et utiliser les images situées dans votre répertoire de projet `src/`, comme vous le feriez dans des composants Astro.
+De plus, vous pouvez importer et utiliser des images situées dans votre répertoire de projet `src/`, comme vous le feriez dans des composants Astro.
 
 ```mdx title="src/pages/post-1.mdx"
 import rocket from '../images/rocket.svg';
+
 # Ma Page MDX
+
 // Image locale située à src/images/rocket.svg
 <img src={rocket} alt="Une fusée dans l'espace."/>
+
 // Image locale située à public/assets/stars.png
 ![Un ciel nocturne étoilé.](/assets/stars.png)
 <img src="/assets/stars.png" alt="Un ciel nocturne étoilé." />
+
 // Image distante sur un autre serveur
 ![Astro](https://astro.build/assets/logo.png)
 <img src="https://astro.build/assets/logo.png" width="25" alt="Astro" />
 ```
 
-### Dans des composants de Framwork UI
+### Dans les Composants de Framwork UI
 
-Lorsque vous ajoutez des images dans un [composant de Framework UI](/fr/core-concepts/framework-components/) (i.e. React, Svelte), utilisez pour les images la syntaxe appropriée pour ce Framework de composants particulier.
+Lorsque vous ajoutez des images dans un [composant de Framework UI](/fr/core-concepts/framework-components/) (ex : React, Svelte), utilisez la syntaxe des images appropriée pour ce Framework de composants particulier.
 
 ## Où stocker les images
 
 ### `src/`
-Vos images stockées dans `src/` peuvent être utilisée par des composants (`.astro`, `.mdx` et autres Frameworks UI) mais pas dans les fichiers Markdown. 
+Vos images stockées dans `src/` peuvent être utilisées par des composants (`.astro`, `.mdx` et autres Frameworks UI) mais pas dans les fichiers Markdown. 
 
-Nous recommendons de garder vos images dans [`public/`](#public) or de les stocker [à distance](#using-images-from-a-cms-or-cdn) si vous devez utiliser des fichiers Markdown.
+Nous recommendons de garder vos images dans [`public/`](#public) ou de les stocker [à distance](#using-images-from-a-cms-or-cdn) si vous devez utiliser des fichiers Markdown.
 
 Importez-les depuis un **chemin de fichier relatif** ou un [alias d'import](/fr/guides/aliases/) dans n'importe quel fichier composant et utilisez ensuite l'import comme attribut `src` de l'image.
-
 
 ```astro
 ---
 // src/pages/index.astro
+
 // Accéder aux images dans `src/images/`
 import logo from '../images/logo.png';
 ---
