no need for create-sst@rc anymore

--- a/src/content/docs/en/guides/deploy/sst.mdx
+++ b/src/content/docs/en/guides/deploy/sst.mdx
@@ -12,7 +12,7 @@ You can also use any additional SST constructs like Cron Jobs, Buckets, Queues, 
 ## Quickstart
 
 1. Create an astro project
-1. Run `npx create-sst@rc`
+1. Run `npx create-sst`
 1. It should detect that you are using Astro and ask you to confirm.
 1. Once you're ready for deployment you can run `npx sst deploy --stage=production`
 
