checkpoint for playwright

--- a/src/pages/fr/guides/testing.mdx
+++ b/src/pages/fr/guides/testing.mdx
@@ -8,3 +8,39 @@ i18nReady: false
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 Le test aide à ecrire et maintenir du code Astro. Astro supporte une variété d'outils pour tests unitaires, tests des Composants, et test de bout en bout comme Jest, Mocha, Jasmine, Cypress et Playwright. Vous pouvez même installer des librairies de test spécifique au Framework de votre choix, par exemple, React Testing Library pour tester vos Framework de Composants UI. 
+
+Tester votre framework vous permet d'exprimer des **assertions** ou des **attentes** sur le comportement de votre code dans un cas spécifique, et ensuite comparer cela au comportement actuel de votre code. 
+
+## Vittest
+
+C'est un framework de test unitaires pour Vite avec ESM, TypeScript et JSX via esbuild.
+
+Veuillez voir [Astro + Vitest starter template](https://github.com/withastro/astro/tree/latest/examples/with-vitest) sur Github.
+
+## Playwright
+
+Playwright est un framework de test de bout en bout pour des applications webs modernes. Utilisez les API(ou IPA) de Playwright en JavaScript ou TypeScript pour tester votre code Astro sur tous les moteurs de rendu y compris Chromium, WebKit et Firefox. 
+
+### Installation
+
+Vous pouvez commencer et éxecuter vos tests en utilisant l'[éxtension VS Code](https://playwright.dev/docs/getting-started-vscode)
+
+Alternativement, vous pouvez installer Playwright à l' intérieur de votre projet Astro via votre gestionnaire de paquets preféré. Suivez les instructions CLI pour choisir entre JavaScript et TypeScript, nommer votre dossier, et ajouter des Github Actions workflow facultatives.
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm init playwright@latest
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm dlx create-playwright
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn create playwright
+  ```
+  </Fragment>
+</PackageManagerTabs>
