checkpoint for playwright test setup

--- a/src/pages/fr/guides/testing.mdx
+++ b/src/pages/fr/guides/testing.mdx
@@ -44,3 +44,38 @@ Alternativement, vous pouvez installer Playwright à l' intérieur de votre proj
   ```
   </Fragment>
 </PackageManagerTabs>
+
+### Créez votre premier test Playwright
+
+1. Choisissez une page à tester. Dans l'exemple ci-dessous, on utilisera la page `index.astro`.
+
+```html title="src/pages/index.astro"
+---
+---
+<html lang="en">
+  <head>
+    <title>Astro is awesome!</title>
+    <meta name="description" content="Pull content from anywhere and serve it fast with Astro's next-gen island architecture." />
+  </head>
+  <body></body>
+</html>
+```
+
+2. Créez un nouveau dossier et ajouter le fichier suivant `src/test`. Copiez et collez le test suivant dans le fichier pour verifier que la méta de la page soit correct. Changez la contenu `<title>` de la page pour correspondre avec la page que vous testiez.
+
+```jsx title="src/test/index.spec.ts" "Astro is awesome!"
+import { test, expect } from '@playwright/test';
+
+test('meta is correct', async ({ page }) => {
+  await page.goto("http://localhost:3000/");
+
+  await expect(page).toHaveTitle('Astro is awesome!');
+});
+```
+
+:::tip[set a baseurl]
+Vous pouvez definir le [`"baseURL": "http://localhost:3000"`](https://playwright.dev/docs/api/class-testoptions#test-options-base-url) dans le fichier de configuration `playwright.config.ts` pour pouvoir utiliser `page.goto("/")` au lieu de `page.goto("http://localhost:3000/")` pour un lien plus pratique.  
+:::
+
+### Executer vos tests Playwright 
+
