checkpoint 3/4 for playwright

--- a/src/pages/fr/guides/testing.mdx
+++ b/src/pages/fr/guides/testing.mdx
@@ -25,7 +25,7 @@ Playwright est un framework de test de bout en bout pour des applications webs m
 
 Vous pouvez commencer et éxecuter vos tests en utilisant l'[éxtension VS Code](https://playwright.dev/docs/getting-started-vscode)
 
-Alternativement, vous pouvez installer Playwright à l' intérieur de votre projet Astro via votre gestionnaire de paquets preféré. Suivez les instructions CLI pour choisir entre JavaScript et TypeScript, nommer votre dossier, et ajouter des Github Actions workflow facultatives.
+Alternativement, vous pouvez installer Playwright à l' intérieur de votre projet Astro via votre gestionnaire de packages preféré. Suivez les instructions CLI pour choisir entre JavaScript et TypeScript, nommer votre dossier, et ajouter des Github Actions workflow facultatives.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -78,4 +78,22 @@ Vous pouvez definir le [`"baseURL": "http://localhost:3000"`](https://playwright
 :::
 
 ### Executer vos tests Playwright 
+
+Vous pouvez executer un seul test ou plusieurs test à la fois, testant un ou plusieurs navigateurs. Par défaut, les resultats de vos tests seront montrés sur votre terminal. Facultativement, vous pouvez ouvrir le HTML Test Reporter pour vous montrer un bilan complet et filtrer les resultats.    
+
+1. Pour executer nos tests sur l'exemple précedant via la commande de ligne, utilisez le commande `test`. Facultativement, incluez le nom du fichier à tester pour un test singulier:
+
+```sh
+npx playwright test index.spec.ts
+```
+
+2. Pour voir le Bilan HTML complet, ouvrez-le avec la commande qui suive:
+```sh
+npx playwright show-report
+```
+
+:::tip
+Executez vos tests contre le code de production pour mieux ressembler à votre site deployé.
+:::
+
 
