first draft done

--- a/src/pages/fr/guides/testing.mdx
+++ b/src/pages/fr/guides/testing.mdx
@@ -23,7 +23,7 @@ Playwright est un framework de test de bout en bout pour des applications webs m
 
 ### Installation
 
-Vous pouvez commencer et éxecuter vos tests en utilisant l'[éxtension VS Code](https://playwright.dev/docs/getting-started-vscode)
+Vous pouvez commencer et éxecuter vos tests en utilisant [l'éxtension VS Code](https://playwright.dev/docs/getting-started-vscode)
 
 Alternativement, vous pouvez installer Playwright à l' intérieur de votre projet Astro via votre gestionnaire de packages preféré. Suivez les instructions CLI pour choisir entre JavaScript et TypeScript, nommer votre dossier, et ajouter des Github Actions workflow facultatives.
 
@@ -96,4 +96,35 @@ npx playwright show-report
 Executez vos tests contre le code de production pour mieux ressembler à votre site deployé.
 :::
 
+#### Avancé: Lancer un serveur de development pendant les tests
 
+Vous pouvez aussi avoir Playwright lancer votre serveur quand vous executez votre script de test en utilisant l'option [`webServer`](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests) dans le fichier de configuration Playwright.
+
+
+Voici un exemple des configurations et commandes en via Yarn:
+
+1. Ajouter un script de test à votre fichier `package.json` dans la racine du projet, tel que `"test:e2e:" "playwright test"`.
+
+2. Dans `playwright.config.ts`, ajoutez l'objet `webServer` et changez la commande pour `yarn preview`.
+
+```js title="playwright.config.ts" ins={3-8} "yarn preview"
+import type { PlaywrightTestConfig } from '@playwright/test';
+const config: PlaywrightTestConfig = {
+  webServer: {
+    command: 'yarn preview',
+    url: 'http://localhost:3000/app/',
+    timeout: 120 * 1000,
+    reuseExistingServer: !process.env.CI,
+  },
+  use: {
+    baseURL: 'http://localhost:3000/app/',
+  },
+};
+export default config;
+```
+3. Executez `yarn build`, ensuite executez `yarn test:e2e` pour courir les tests Playwright.
+
+Pour plus d'information, veuillez voir les liens ci-dessous:
+
+- [Getting started with Playwright](https://playwright.dev/docs/intro)
+- [Use a development server](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests)
