first revision and typo fix

--- a/src/pages/fr/guides/testing.mdx
+++ b/src/pages/fr/guides/testing.mdx
@@ -7,7 +7,7 @@ i18nReady: false
 
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-Le test aide à ecrire et maintenir du code Astro. Astro supporte une variété d'outils pour tests unitaires, tests des Composants, et test de bout en bout comme Jest, Mocha, Jasmine, Cypress et Playwright. Vous pouvez même installer des librairies de test spécifique au Framework de votre choix, par exemple, React Testing Library pour tester vos Framework de Composants UI. 
+Le test vous aide écrire et maintenir du code Astro. Astro supporte une variété d'outils pour tests unitaires, tests des Composants, et test de bout en bout comme Jest, Mocha, Jasmine, Cypress et Playwright. Vous pouvez même installer des librairies de test spécifique au framework de votre choix, par exemple, React Testing Library pour tester vos framework de Composants UI. 
 
 Tester votre framework vous permet d'exprimer des **assertions** ou des **attentes** sur le comportement de votre code dans un cas spécifique, et ensuite comparer cela au comportement actuel de votre code. 
 
@@ -19,11 +19,11 @@ Veuillez voir [Astro + Vitest starter template](https://github.com/withastro/ast
 
 ## Playwright
 
-Playwright est un framework de test de bout en bout pour des applications webs modernes. Utilisez les API(ou IPA) de Playwright en JavaScript ou TypeScript pour tester votre code Astro sur tous les moteurs de rendu y compris Chromium, WebKit et Firefox. 
+Playwright est un framework de test de bout en bout pour des applications webs modernes. Utilisez les API de Playwright en JavaScript ou TypeScript pour tester votre code Astro sur tous les moteurs de rendu y compris Chromium, WebKit et Firefox. 
 
 ### Installation
 
-Vous pouvez commencer et éxecuter vos tests en utilisant [l'éxtension VS Code](https://playwright.dev/docs/getting-started-vscode)
+Vous pouvez commencer par éxecuter vos tests en utilisant [l'éxtension VS Code](https://playwright.dev/docs/getting-started-vscode)
 
 Alternativement, vous pouvez installer Playwright à l' intérieur de votre projet Astro via votre gestionnaire de packages preféré. Suivez les instructions CLI pour choisir entre JavaScript et TypeScript, nommer votre dossier, et ajouter des Github Actions workflow facultatives.
 
@@ -45,7 +45,7 @@ Alternativement, vous pouvez installer Playwright à l' intérieur de votre proj
   </Fragment>
 </PackageManagerTabs>
 
-### Créez votre premier test Playwright
+### Créer votre premier test Playwright
 
 1. Choisissez une page à tester. Dans l'exemple ci-dessous, on utilisera la page `index.astro`.
 
@@ -61,7 +61,7 @@ Alternativement, vous pouvez installer Playwright à l' intérieur de votre proj
 </html>
 ```
 
-2. Créez un nouveau dossier et ajouter le fichier suivant `src/test`. Copiez et collez le test suivant dans le fichier pour verifier que la méta de la page soit correct. Changez la contenu `<title>` de la page pour correspondre avec la page que vous testiez.
+2. Créez un nouveau dossier et ajouter le fichier suivant `src/test`. Copiez et collez le test suivant dans le fichier pour verifier que la méta de la page soit correcte. Changez le contenu `<title>` de la page pour correspondre avec la page que vous testiez.
 
 ```jsx title="src/test/index.spec.ts" "Astro is awesome!"
 import { test, expect } from '@playwright/test';
@@ -73,13 +73,13 @@ test('meta is correct', async ({ page }) => {
 });
 ```
 
-:::tip[set a baseurl]
+:::tip[Mettre un lien de base]
 Vous pouvez definir le [`"baseURL": "http://localhost:3000"`](https://playwright.dev/docs/api/class-testoptions#test-options-base-url) dans le fichier de configuration `playwright.config.ts` pour pouvoir utiliser `page.goto("/")` au lieu de `page.goto("http://localhost:3000/")` pour un lien plus pratique.  
 :::
 
 ### Executer vos tests Playwright 
 
-Vous pouvez executer un seul test ou plusieurs test à la fois, testant un ou plusieurs navigateurs. Par défaut, les resultats de vos tests seront montrés sur votre terminal. Facultativement, vous pouvez ouvrir le HTML Test Reporter pour vous montrer un bilan complet et filtrer les resultats.    
+Vous pouvez executer un seul ou plusieurs tests à la fois, testant un ou plusieurs navigateurs. Par défaut, les resultats de vos tests seront montrés sur votre terminal. Facultativement, vous pouvez ouvrir le HTML Test Reporter pour vous montrer un bilan complet et filtrer les resultats.    
 
 1. Pour executer nos tests sur l'exemple précedant via la commande de ligne, utilisez le commande `test`. Facultativement, incluez le nom du fichier à tester pour un test singulier:
 
@@ -101,11 +101,11 @@ Executez vos tests contre le code de production pour mieux ressembler à votre s
 Vous pouvez aussi avoir Playwright lancer votre serveur quand vous executez votre script de test en utilisant l'option [`webServer`](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests) dans le fichier de configuration Playwright.
 
 
-Voici un exemple des configurations et commandes en via Yarn:
+Voici un exemple des configurations et commandes via Yarn:
 
 1. Ajouter un script de test à votre fichier `package.json` dans la racine du projet, tel que `"test:e2e:" "playwright test"`.
 
-2. Dans `playwright.config.ts`, ajoutez l'objet `webServer` et changez la commande pour `yarn preview`.
+2. Dans `playwright.config.ts`, ajoutez l'objet `webServer` et changez la valeur de _command_ pour `yarn preview`.
 
 ```js title="playwright.config.ts" ins={3-8} "yarn preview"
 import type { PlaywrightTestConfig } from '@playwright/test';
