i18n(zh-cn): Update install guide

--- a/src/content/docs/zh-cn/guides/troubleshooting.mdx
+++ b/src/content/docs/zh-cn/guides/troubleshooting.mdx
@@ -124,7 +124,7 @@ const myFeaturedPost = posts.find(post => post.file.includes(pathToMyFeaturedPos
 
 ### 和 Yarn 2+（Berry）一起使用 Astro
 
-Yarn 2+，又名 Berry，使用名叫 [Plug'n'Play (PnP)](https://yarnpkg.com/features/pnp) 的技术来存储和管理 Node 模块，这在使用 `create-astro` 初始化新 Astro 项目或在使用 Astro 工作时可能[导致问题](https://github.com/withastro/astro/issues/3450)。解决办法是在 `yarnrc.yml` 中将 [`nodeLinker` 属性](https://yarnpkg.com/configuration/yarnrc#nodeLinker)设置为 `node-modules`。
+Yarn 2+，又名 Berry，使用名叫 [Plug'n'Play (PnP)](https://yarnpkg.com/features/pnp) 的技术来存储和管理 Node 模块，这在使用 `create astro` 初始化新 Astro 项目或在使用 Astro 工作时可能[导致问题](https://github.com/withastro/astro/issues/3450)。解决办法是在 `yarnrc.yml` 中将 [`nodeLinker` 属性](https://yarnpkg.com/configuration/yarnrc#nodeLinker)设置为 `node-modules`。
 
 ```yaml
 nodeLinker: "node-modules"
