--- a/src/pages/fr/guides/testing.mdx
+++ b/src/pages/fr/guides/testing.mdx
@@ -1,31 +1,31 @@
 ---
 layout: ~/layouts/MainLayout.astro
 title: Test
-description: Une introduction sur comment tester avec Astro 
-i18nReady: false
+description: Une introduction aux tests dans Astro 
+i18nReady: true
 ---
 
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-Le test vous aide écrire et maintenir du code Astro. Astro supporte une variété d'outils pour tests unitaires, tests des Composants, et test de bout en bout comme Jest, Mocha, Jasmine, Cypress et Playwright. Vous pouvez même installer des librairies de test spécifique au framework de votre choix, par exemple, React Testing Library pour tester vos framework de Composants UI. 
+Le test vous aide à écrire et à maintenir du code Astro fonctionnel. Astro supporte une variété d'outils populaires pour les tests unitaires, tests des Composants, et test de bout en bout tel que Jest, Mocha, Jasmine, Cypress et Playwright. Vous pouvez même installer des librairies de test spécifique au framework de votre choix, par exemple, React Testing Library pour tester les Composants UI de vos frameworks. 
 
-Tester votre framework vous permet d'exprimer des **assertions** ou des **attentes** sur le comportement de votre code dans un cas spécifique, et ensuite comparer cela au comportement actuel de votre code. 
+Tester vos frameworks vous permet de declarer des **assertions** ou des **attentes** sur le comportement de votre code dans un cas spécifique et de les comparer vis à vis du comportement actuel de votre code. 
 
 ## Vittest
 
-C'est un framework de test unitaires pour Vite avec ESM, TypeScript et JSX via esbuild.
+C'est un framework de test unitaires pour Vite qui supporte ESM, TypeScript et JSX via esbuild.
 
 Veuillez voir [Astro + Vitest starter template](https://github.com/withastro/astro/tree/latest/examples/with-vitest) sur Github.
 
 ## Playwright
 
-Playwright est un framework de test de bout en bout pour des applications webs modernes. Utilisez les API de Playwright en JavaScript ou TypeScript pour tester votre code Astro sur tous les moteurs de rendu y compris Chromium, WebKit et Firefox. 
+Playwright est un framework de test de bout en bout pour des applications webs modernes. Utilisez les API de Playwright en JavaScript ou TypeScript pour tester votre code Astro sur tous les moteurs de rendu tel que Chromium, WebKit et Firefox. 
 
 ### Installation
 
 Vous pouvez commencer par éxecuter vos tests en utilisant [l'éxtension VS Code](https://playwright.dev/docs/getting-started-vscode)
 
-Alternativement, vous pouvez installer Playwright à l' intérieur de votre projet Astro via votre gestionnaire de packages preféré. Suivez les instructions CLI pour choisir entre JavaScript et TypeScript, nommer votre dossier, et ajouter des Github Actions workflow facultatives.
+Alternativement, vous pouvez aussi installer Playwright dans votre projet Astro via votre gestionnaire de packages preféré. Suivez les instructions CLI pour choisir entre JavaScript et TypeScript, nommer votre dossier, et ajouter des workflows falcutatifs de Github Actions.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -61,7 +61,7 @@ Alternativement, vous pouvez installer Playwright à l' intérieur de votre proj
 </html>
 ```
 
-2. Créez un nouveau dossier et ajouter le fichier suivant `src/test`. Copiez et collez le test suivant dans le fichier pour verifier que la méta de la page soit correcte. Changez le contenu `<title>` de la page pour correspondre avec la page que vous testiez.
+2. Créez un nouveau dossier et ajoutez le fichier suivant `src/test`. Copiez le test suivant dans le fichier pour verifier que la méta de la page soit correcte. Changez le contenu `<title>` de la page pour correspondre avec la page à tester.
 
 ```jsx title="src/test/index.spec.ts" "Astro is awesome!"
 import { test, expect } from '@playwright/test';
@@ -79,33 +79,32 @@ Vous pouvez definir le [`"baseURL": "http://localhost:3000"`](https://playwright
 
 ### Executer vos tests Playwright 
 
-Vous pouvez executer un seul ou plusieurs tests à la fois, testant un ou plusieurs navigateurs. Par défaut, les resultats de vos tests seront montrés sur votre terminal. Facultativement, vous pouvez ouvrir le HTML Test Reporter pour vous montrer un bilan complet et filtrer les resultats.    
+Vous pouvez executer un seul ou plusieurs tests à la fois, testant un ou plusieurs navigateurs. Par défaut, les resultats de vos tests seront montrés sur votre terminal. Si vous voulez le bilan complet et filtrer les resultats,  ouvrez le HTML Test Reporter.    
 
-1. Pour executer nos tests sur l'exemple précedant via la commande de ligne, utilisez le commande `test`. Facultativement, incluez le nom du fichier à tester pour un test singulier:
-
+1. Pour executer nos tests sur l'exemple précedant par commande de ligne, utilisez la commande `test`. Incluez le nom du fichier à tester si vous voulez executer un test singulier:
 ```sh
 npx playwright test index.spec.ts
 ```
 
-2. Pour voir le Bilan HTML complet, ouvrez-le avec la commande qui suive:
+2. Pour voir le bilan HTML complet, tapez la commande qui suive:
 ```sh
 npx playwright show-report
 ```
 
 :::tip
-Executez vos tests contre le code de production pour mieux ressembler à votre site deployé.
+Executez vos tests contre le code de production pour mieux ressembler à votre site en ligne.
 :::
 
 #### Avancé: Lancer un serveur de development pendant les tests
 
-Vous pouvez aussi avoir Playwright lancer votre serveur quand vous executez votre script de test en utilisant l'option [`webServer`](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests) dans le fichier de configuration Playwright.
+Quand vous executez vos script de test, vous pouvez aussi avoir Playwright lancer votre serveur en utilisant l'option [`webServer`](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests) dans le fichier de configuration Playwright.
 
 
 Voici un exemple des configurations et commandes via Yarn:
 
 1. Ajouter un script de test à votre fichier `package.json` dans la racine du projet, tel que `"test:e2e:" "playwright test"`.
 
-2. Dans `playwright.config.ts`, ajoutez l'objet `webServer` et changez la valeur de _command_ pour `yarn preview`.
+2. Dans `playwright.config.ts`, ajoutez l'objet `webServer` et changez la valeur de _command_ en `yarn preview`.
 
 ```js title="playwright.config.ts" ins={3-8} "yarn preview"
 import type { PlaywrightTestConfig } from '@playwright/test';
