--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -17,9 +17,9 @@ Here are some key concepts and migration strategies to help you get started. Use
 
 Nuxt and Astro share some similarities that will help you migrate your project:
 
-- Astro projects can also be SSG or [SSR with page level prerendering](/en/guides/server-side-rendering/#prerendering).
+- Astro projects can also be SSG or [SSR with page level prerendering](/en/guides/server-side-rendering/#hybrid-rendering).
 - Astro uses file-based routing, and [allows specially named pages to create dynamic routes](/en/core-concepts/routing/#dynamic-routes).
-- Astro is [component-based](/en/core-concepts/components/), and your markup structure will be similar before and after your migration.
+- Astro is [component-based](/en/core-concepts/astro-components/), and your markup structure will be similar before and after your migration.
 - Astro has [an official integration for using Vue components](/en/guides/integrations-guide/vue/).
 - Astro has support for [installing NPM packages](/en/guides/imports/#npm-packages), including Vue libraries. You may be able to keep some or all of your existing Vue components and dependencies.
 
